<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="livepusher_caton_warning">卡顿警告:出现卡顿%sms[%s]</string>
    <string name="livepusher_caton_warning_0_ms">卡顿警告：出现卡顿 0ms</string>
    <string name="livepusher_drop_warning">丢帧警告:网络状况不佳[%s]</string>
    <string name="livepusher_device_model">机型:%s Android系统版本:%s</string>
    <string name="livepusher_total_bitrate">编码码率：%skpbs</string>
    <string name="livepusher_upload_speed">上传网速：%skpbs</string>
    <string name="livepusher_fps_gop">FPS：%s  GOP：%ss</string>
    <string name="livepusher_step_1">阶段一：检查地址合法性</string>
    <string name="livepusher_step_2">阶段二：连接到云服务器</string>
    <string name="livepusher_step_3">阶段三：摄像头打开成功</string>
    <string name="livepusher_step_4_hardcode">阶段四：编码器正常启动[硬编]</string>
    <string name="livepusher_step_4_softcode">阶段四：编码器正常启动[软编]</string>
    <string name="livepusher_step_4_normal">阶段四：编码器正常启动</string>
    <string name="livepusher_step_5">阶段五：开始进入推流中...</string>
    <string name="livepusher_input_qrcode_or_url">请输入或扫二维码获取推流地址</string>
    <string name="livepusher_get_url_retry">已发起获取 RTMP URL，请稍后重试。</string>
    <string name="livepusher_get_url_fail">获取推流地址失败</string>
    <string name="livepusher_get_url_success">获取推流地址成功，点击左上角二维码查看推流地址。</string>
    <string name="livepusher_check_url">检查地址合法性</string>
    <string name="livepusher_url_illegal">推流地址不合法，目前支持rtmp推流!</string>
    <string name="livepusher_license_check_fail">License 校验失败</string>
    <string name="livepusher_license_click_info"> 详情请点击[</string>
    <string name="livepusher_license_click_use_info"> 详情请点击[License 使用指南</string>
    <string name="livepusher_push_fail">推流失败</string>
    <string name="livepusher_comfirm">确定</string>
    <string name="livepusher_cancel">取消</string>
    <string name="livepusher_back">返回</string>
    <string name="livepusher_stop">停止</string>
    <string name="livepusher_play">播放</string>
    <string name="livepusher_pause">暂停</string>
    <string name="livepusher_resume">恢复</string>
    <string name="livepusher_end">结束</string>
    <string name="livepusher_send">发送</string>
    <string name="livepusher_bgm_tone">BGM音调：</string>
    <string name="livepusher_bgm_volume">BGM音量：</string>
    <string name="livepusher_mic_volume">MIC音量：</string>
    <string name="livepusher_online_music">在线音乐？</string>
    <string name="livepusher_cycles">循环次数</string>
    <string name="livepusher_cycles_colon">循环次数：</string>
    <string name="livepusher_receive_event">receive event: </string>
    <string name="livepusher_pushing_start_stop_retry_push">当前正在推流，启动或关闭缩放需要重新推流</string>
    <string name="livepusher_screenshot_success">截图成功</string>
    <string name="livepusher_screenshot_fail">截图失败</string>
    <string name="livepusher_screenshot_fail_push">截图失败，请先发起推流</string>
    <string name="livepusher_share_pic">图片分享</string>
    <string name="livepusher_no_file_play_fail">本地BGM文件不存在，播放失败</string>
    <string name="livepusher_rtmp_push">RTMP 推流</string>
    <string name="livepusher_rtmp_url">RTMP 播放地址</string>
    <string name="livepusher_rtmp_speed_up_url">RTMP 加速流地址</string>
    <string name="livepusher_flv_url">FLV 播放地址</string>
    <string name="livepusher_hls_url">HLS 播放地址</string>
    <string name="livepusher_network_warning_hint">当前网络质量很糟糕，建议您拉近离路由器的距离，避免WiFi穿墙！</string>
    <string name="livepusher_privite_mode">开启隐私模式</string>
    <string name="livepusher_mute_audio">开启静音模式</string>
    <string name="livepusher_orientation">开启横屏推流</string>
    <string name="livepusher_debug_info">开启调试信息</string>
    <string name="livepusher_water_mark">添加图像水印</string>
    <string name="livepusher_pure_audio">开启纯音频推流</string>
    <string name="livepusher_mirror">开启观看端镜像</string>
    <string name="livepusher_flash_light">开启后置闪光灯</string>
    <string name="livepusher_focus">手动点击曝光对焦</string>
    <string name="livepusher_zoom">手势放大预览画面</string>
    <string name="livepusher_local_snapshot">本地截图</string>
    <string name="livepusher_snapshot">截图</string>
    <string name="livepusher_send_message">发送消息</string>
    <string name="livepusher_video_quality">画质偏好</string>
    <string name="livepusher_audio_channel">音质选择</string>
    <string name="livepusher_hw_acc">开启硬件加速</string>
    <string name="livepusher_adjust_bitrate">开启带宽自适应</string>
    <string name="livepusher_ear_monitoring">开启耳返</string>

</resources>
