<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/livepusher_hlf_transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_privite_mode"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_private_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_mute_audio"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_mute_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/livepusher_ll_orientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_orientation"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_debug_info"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_debug_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_water_mark"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_water_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_pure_audio"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_pure_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_mirror"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_mirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_flash_light"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_focus"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_zoom"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/livepusher_local_snapshot"
            android:textColor="@color/livepusher_btn_line"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/livepusher_btn_snapshot"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:clickable="true"
                android:text="@string/livepusher_snapshot"
                android:textSize="14sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_send_message"
            android:textColor="@color/livepusher_btn_line" />

        <EditText
            android:id="@+id/livepusher_et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLines="1" />

        <Button
            android:id="@+id/livepusher_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="3dp"
            android:clickable="true"
            android:text="@string/livepusher_send"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
