<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/livepusher_hlf_transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/livepusher_cycles_colon"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/livepusher_et_bgm_loop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:hint="@string/livepusher_cycles"
            android:inputType="numberSigned"
            android:text="1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/livepusher_cb_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/livepusher_online_music" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/livepusher_mic_volume"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/livepusher_sb_mic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="200"
            android:progress="100"
            android:thumb="@drawable/livepusher_thumb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/livepusher_bgm_volume"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/livepusher_sb_bgm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="200"
            android:progress="100"
            android:thumb="@drawable/livepusher_thumb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/livepusher_bgm_tone"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/livepusher_sb_bgm_pitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="200"
            android:progress="100"
            android:thumb="@drawable/livepusher_thumb" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/livepusher_btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/livepusher_play"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/livepusher_btn_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/livepusher_pause"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/livepusher_btn_resume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/livepusher_resume"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/livepusher_btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livepusher_end"
            android:textColor="@color/livepusher_white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>