<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/livepusher_round_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/livepusher_tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/livepusher_black"
        android:textSize="14dp" />

    <LinearLayout
        android:id="@+id/livepusher_ll_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/livepusher_tv_brand"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/livepusher_tv_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/livepusher_black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/livepusher_tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/livepusher_black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/livepusher_tv_fpsgop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/livepusher_black"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/livepusher_ll_top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/livepusher_iv_step1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/livepusher_ic_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livepusher_step_1"
                android:textColor="@color/livepusher_black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/livepusher_iv_step2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/livepusher_ic_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livepusher_step_2"
                android:textColor="@color/livepusher_black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/livepusher_iv_step3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/livepusher_ic_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livepusher_step_3"
                android:textColor="@color/livepusher_black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/livepusher_iv_step4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/livepusher_ic_red" />

            <TextView
                android:id="@+id/livepusher_tv_seg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livepusher_step_4_normal"
                android:textColor="@color/livepusher_black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/livepusher_iv_step5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/livepusher_ic_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livepusher_step_5"
                android:textColor="@color/livepusher_black"
                android:textSize="14dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/livepusher_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/livepusher_iv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/livepusher_ic_log_close" />

    <ImageView
        android:id="@+id/livepusher_iv_que"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@+id/livepusher_tv_brand"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/livepusher_icon_que" />

</RelativeLayout>